[package]
name = "convert-office-images"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22.0"
serde = { version = "1.0.130", features = ["derive"] }
base64 = "0.13.0"

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[dependencies.zip]
version = "0.5.12"
default-features = false
features = ["deflate"]
