[package]
name = "convert-office-images-wasm-wrapper"
version = "0.1.0"
authors = ["Jacob Mischka <jacob@mischka.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
convert-office-images = { path = "../" }
wasm-bindgen = "0.2.67"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[workspace]

[profile.release]
incremental = true
